Fix profile picture offscreen

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/TechnicJelle/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/TechnicJelle/dark-whatsapp/main/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.7.2.3
+@version      3.7.2.4
 @license      MIT
 @preprocessor stylus
 
@@ -1994,7 +1994,7 @@ msg += "P.S. CSS can not create clickable links."
 
     // Enlarged profile pictures next to messages -->
     .xgd8bvy {
-      left: -64px i;
+      left: -19px i;
       position: absolute;
       width: 54px;
       height: 54px;
